src/objects/Solution__c.object
<CustomObject>
    <fields>
        <fullName>Condition1__c</fullName>
        <label>状況１</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition2__c</fullName>
        <label>状況２</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition3__c</fullName>
        <label>状況３</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EvaluationStatus__c</fullName>
        <label>評価ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>要対応</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対応不要</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>連絡事項</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>案件No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>リリース日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResponseStatus__c</fullName>
        <label>対応状況</label>
        <picklist>
            <picklistValues>
                <fullName>新規</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>対応中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>リリース完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>クローズ</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vulnerability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>脆弱性情報</label>
        <referenceTo>Vulnerability__c</referenceTo>
        <relationshipLabel>影響確認・対策</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>影響確認・対策</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>影響確認・対策番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>